--- a/components/Slider/Slider.module.scss
+++ b/components/Slider/Slider.module.scss
@@ -1,47 +1,74 @@
 .Slider {
   width: 100%;
-  height: 100vh;
+  height: fit-content;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  gap: 2rem;
+
+  align-items: center;
+
+  border-bottom: 1px solid #ffffff43;
+
+  padding-bottom: 3rem;
 
   .sidebar {
-    width: 30%;
-    height: 100%;
-
-    overflow-y: scroll;
+    width: 100%;
+    height: fit-content;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     gap: 1rem;
 
     padding: 1rem;
-
-    border-right: 1px solid #ffffff0a;
   }
 
-  .content {
-    width: 70%;
-    height: 100%;
+  .poster {
+    width: 100%;
+    aspect-ratio: 9 / 13;
+    position: relative;
 
-    overflow-y: scroll;
+    &:not(.active)::after {
+      content: "À venir ...";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6); // semi-transparent overlay
+      color: white; // make the text visible
+      display: flex; // center the text
+      align-items: center;
+      justify-content: center;
+      font-family: --font-reglo;
+      font-size: 1.2rem;
+      letter-spacing: 0.2rem;
+      font-weight: bold;
+      z-index: 99;
+      pointer-events: none;
+      text-transform: uppercase;
+    }
 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 1rem;
+    .poster-image {
+      object-fit: contain;
+      transition: filter 0.3s ease;
 
-    padding: 1rem;
+      filter: saturate(0);
+
+      &.active {
+        &:hover {
+          filter: saturate(1);
+          cursor: pointer;
+        }
+      }
+    }
   }
 
   p {
-    font-family: var(--font-sf-mono);
-    font-weight: 400;
+    font-family: sans-serif;
     font-size: 1rem;
     color: #fff;
+    text-align: left;
+    line-height: 150%;
 
     display: block;
   }
@@ -50,10 +77,11 @@
     font-family: var(--font-reglo);
     width: 100%;
     font-weight: 700;
-    font-size: 5rem;
+    font-size: 1.5rem;
     letter-spacing: 0.3rem;
-    text-align: center;
+    text-align: left;
     color: #fff;
     text-transform: uppercase;
+    margin-top: 3rem;
   }
 }
