feat: added needed features, and fixed entire site, added data

--- a/components/Slider/Slider.module.scss
+++ b/components/Slider/Slider.module.scss
@@ -31,7 +31,7 @@
     position: relative;
 
     &:not(.active)::after {
-      content: "À venir ...";
+      content: "...";
       position: absolute;
       inset: 0;
       background: rgba(0, 0, 0, 0.6); // semi-transparent overlay
