--- a/components/Content/Content.module.scss
+++ b/components/Content/Content.module.scss
@@ -41,6 +41,14 @@
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
+
+      text-align: left;
+      width: 100%;
+
+      a {
+        font-family: sans-serif;
+        color: #fff;
+      }
     }
   }
 
@@ -63,7 +71,7 @@
     text-align: left;
     color: #fff;
     text-transform: uppercase;
-    margin-top: 3rem;
+    margin-top: 1rem;
   }
 }
 
