--- a/components/Sections/Sections.module.scss
+++ b/components/Sections/Sections.module.scss
@@ -32,6 +32,16 @@
 .à-propos {
   width: 100ch;
   width: clamp(40ch, 10ch + 50vw, 100ch);
+
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 .sections-container {
@@ -42,5 +52,5 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 5rem;
 }
