fix: too many problems

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -21,8 +21,11 @@
     h1 {
       display: inline-block;
 
-      font-family: var(--font-humane);
+      //font-family: var(--font-humane);
+      font-family: var(--font-humane-regular);
+      //font-family: "humaneBold", sans-serif;
       font-weight: 400;
+      //font-weight: 700;
       font-size: 5rem;
       font-size: clamp(
         5rem,
@@ -32,6 +35,10 @@
       letter-spacing: 2rem;
       letter-spacing: clamp(1rem, -4.9710982658959555rem + 22.7457vw, 2rem);
       line-height: normal;
+
+      transform: translateX(
+        clamp(1rem, -4.9710982658959555rem + 16.7457vw, 1.25rem)
+      );
 
       color: #fff;
     }
