--- a/components/Sections/Sections.module.scss
+++ b/components/Sections/Sections.module.scss
@@ -17,7 +17,7 @@
   }
 
   h2 {
-    font-family: var(--font-reglo);
+    font-family: var(--font-sf-pro-bold);
     width: 100%;
     font-weight: 700;
     font-size: 3rem;
