--- a/components/Content/Content.module.scss
+++ b/components/Content/Content.module.scss
@@ -52,6 +52,25 @@
     }
   }
 
+  .stats-container {
+    width: 100%;
+    height: fit-content;
+
+    display: flex;
+    flex-direction: row;
+
+    .stat {
+      width: 100%;
+      height: 100%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+    }
+  }
+
   p {
     font-family: sans-serif;
     font-size: 1rem;
@@ -63,12 +82,23 @@
   }
 
   h2 {
-    font-family: var(--font-reglo);
+    font-family: var(--font-sf-pro-bold);
     width: 100%;
     font-weight: 700;
     font-size: 1.5rem;
     letter-spacing: 0.3rem;
     text-align: left;
+    color: #fff;
+    text-transform: uppercase;
+    margin-top: 1rem;
+  }
+  h3 {
+    font-family: var(--font-sf-pro-bold);
+    width: 100%;
+    font-weight: 700;
+    font-size: 1.25rem;
+    letter-spacing: 0.3rem;
+    text-align: center;
     color: #fff;
     text-transform: uppercase;
     margin-top: 1rem;
