--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -8,7 +8,7 @@
   gap: 2em;
 
   .link {
-    font-family: var(--font-reglo);
+    font-family: var(--font-sf-pro-bold);
     font-weight: 700;
     font-size: 2rem;
     color: #ffffff97;
