--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -60,3 +60,14 @@
     text-decoration: none;
   }
 }
+
+.logo {
+  width: 50px;
+  height: auto;
+  filter: invert(1) contrast(10.5);
+}
+.logo2 {
+  width: 50px;
+  height: auto;
+  filter: invert(0);
+}
