--- a/components/Content/Content.module.scss
+++ b/components/Content/Content.module.scss
@@ -57,17 +57,25 @@
     height: fit-content;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    padding-top: 15vh;
+    padding-bottom: 15vh;
 
     .stat {
       width: 100%;
       height: 100%;
 
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: center;
       align-items: center;
       gap: 1rem;
+
+      p {
+        width: 100%;
+      }
     }
   }
 
@@ -98,10 +106,10 @@
     font-weight: 700;
     font-size: 1.25rem;
     letter-spacing: 0.3rem;
-    text-align: center;
+    text-align: right;
     color: #fff;
     text-transform: uppercase;
-    margin-top: 1rem;
+    //margin-top: 1rem;
   }
 }
 
@@ -109,7 +117,7 @@
   .poster {
     width: 70%;
   }
-  .stats-container {
+  /* .stats-container {
     flex-direction: column !important;
-  }
+  } */
 }
